Fixed alignment of form

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -978,6 +978,8 @@ a.white-btn:hover {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  min-height: 360px;
+
 }
 .subscriber-submit-btn {
   width: 80px;
@@ -2113,6 +2115,13 @@ a.post-tags:hover {
 }
 .dashboard-icon .fa {
   padding: 0px 6px;
+}
+.news-wrapper .subsribers-container > iframe {
+  max-width: 100%;
+  width: 100%;
+  height: 205px;
+  position: absolute;
+  left: -80px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 1200px) {
